@@ -28,6 +28,7 @@ VERSION 2.3
       last check.
 
   BUGFIXES:
+    * Fixed cover art not properly updating in TrayIcon. (BR 228966)
     * Fixed lyrics window size too small after edit. (BR 228922)
     * Fixed odd behaviour when doing drag-and-drop from Collection browser.
       (BR 222500)
